compile.log
/main.cpp: In function ‘int main()’:
/main.cpp:135:33: error: ‘command’ was not declared in this scope
         std::cerr << "Send " << command << std::endl;
                                 ^~~~~~~